--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <div class="grid-container">
       <div class="grid">
       </div>
-      <div class="grid">
-      </div>
-      <div class="grid">
-      </div>
-      <div class="grid">
-      </div>
+    </div>
+    <div class="template">
+      <div class="grid"></div>
     </div>
     <!-- Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
